--- a/code/blog.njk
+++ b/code/blog.njk
@@ -6,15 +6,15 @@ descripction: Meta descripción de la página del Blog
 
 <h1>{{ title }}</h1>
 <h2>Artículos del blog ordenados ascendentemente</h2>
-<ul>
+<ul id="listaArticulos">
   {% for post in collections.blog %}
-    <li><a href="{{ post.url }}"> {{ post.data.title }} - {{ post.data.date }}</a></li>
+    <li class="articulo"><a href="{{ post.url }}"> {{ post.data.title }} - {{ post.data.date }}</a></li>
   {% endfor %}
 </ul>
 <hr />
 <h2>Artículos del blog ordenados descendentemente</h2>
-<ul>
+<ul id="listaArticulos">
   {% for post in collections.blog | reverse %}
-    <li><a href="{{ post.url }}"> {{ post.data.title }} - {{ post.data.date }}</a></li>
+    <li class="articulo"><a href="{{ post.url }}"> {{ post.data.title }} - {{ post.data.date }}</a></li>
   {% endfor %}
 </ul>
